# python_backend_studies

course_01/APIs_with_flask/greenbank/: app.py  greenbank.sqlite  my_database.db  pyproject.toml
course_01/APIs_with_flask/greenbank/instance/: blog.sqlite
course_01/APIs_with_flask/greenbank/src/: app.py  app1.py  db.py  schema.sql
course_01/APIs_with_flask/greenbank/src/controllers/: user.py
course_01/banco_de_dados/: _dbapi.py  _sql_injection.py  _transaction.py  connection.py  my_database.db
course_01/boas_praticas/gerenciamento_de_pacotes/: formatters.txt  new_practices.py  pyproject.toml
